--- a/style.css
+++ b/style.css
@@ -1,5 +1,17 @@
+h1 {
+    text-align: center;
+}
+
 body{
     background: #939e96; 
+}
+
+#banner{
+    width: 100%;
+}
+
+h2 {
+    text-align: center;
 }
 
 p{
@@ -8,4 +20,8 @@ p{
 
 em strong{
     color: red;
+}
+
+#mision{
+    font-size: 20px;
 }
