--- a/style.css
+++ b/style.css
@@ -3,11 +3,16 @@ h1 {
 }
 
 body{
-    background: #939e96; 
+     
 }
 
 #banner{
     width: 100%;
+}
+
+.principal{
+    background: #898989;
+    padding: 20px;
 }
 
 h2 {
@@ -24,4 +29,28 @@ em strong{
 
 #mision{
     font-size: 20px;
+}
+
+.diferenciales{
+    background: rgb(255, 255, 255);
+    padding: 30px;
+}
+
+h3 {
+    text-align: center;
+}
+
+.items {
+    font-style: italic;
+}
+
+ul {
+    display: inline-block;
+    vertical-align: top;
+    width: 20%;
+    margin-right: 15%;
+}
+
+.imgeDiferenciales {
+    width: 50%;
 }
