--- a/style-contacto.css
+++ b/style-contacto.css
@@ -42,7 +42,7 @@ form{
     margin: 40px 0 ;
 }
 
-form label, form p{
+form label, form legend{
     display: block;
     font-size: 20px;
     margin: 0 0 10px;
@@ -56,7 +56,44 @@ form label, form p{
 }
 
 .checkbox{
-    margin: 20px 0;
+    margin: 20px 0 20px 0;
+}
+
+.enviar{
+    height: 0 40px;
+    width: 40%;
+    padding: 15px 0;
+    font-size: 18px;
+    font-weight: bold;
+    color: white;
+    background: orange;
+    border: none;
+    border-radius: 5px;
+    transition: 1s background;
+    transition: 0.2s color;
+    transition: 1s transform;
+    cursor: pointer;
+}
+
+.enviar:hover{
+    background: darkorange;
+    color: black;
+    transform: scale(1.1);
+}
+
+table{
+    margin: 40px 40px;
+}
+
+thead{
+    background: gray;
+    color: white;
+    font-weight: bold;
+}
+
+td,th{
+    border: 1px solid black;
+    padding: 8px 15px;
 }
 
 footer{
