--- a/style.css
+++ b/style.css
@@ -1,55 +1,185 @@
-.titulo-principal {
-    padding-left: 30px;
+body{
+    font-family: 'Montserrat', sans-serif;
 }
 
-#banner{
+header{
+    background-color: #BBBBBB;
+    padding: 20px 0;
+}
+
+.caja{
+    width: 940px;
+    position: relative;
+    margin: 0 auto;
+}
+
+nav{
+    position: absolute;
+    top: 110px;
+    right: 0;
+}
+
+nav li{
+    display: inline;
+    padding: 0 0 0 15px;
+}
+
+nav a{
+    text-transform: uppercase;
+    color: black;
+    font-weight: bold;
+    font-size: 22px;
+    text-decoration: none;
+}
+
+nav a:hover{
+    color: #c78c19;
+    text-decoration: underline;
+}
+
+
+.productos{
+    width: 940px;
+    margin: 0 auto;
+    padding: 50px;
+}
+
+.productos li{
+    display: inline-block;
+    text-align: center;
+    width: 30%;
+    vertical-align: top;
+    margin: 0 1.5%;
+    padding: 30px 20px;
+    box-sizing: border-box;
+    border: 2px solid #000000;
+    border-radius: 10px;
+}
+
+.productos li:hover{
+    border-color: #c78c19;
+}
+
+.productos li:active{
+    border-color: #088c19;
+}
+
+.productos h2{
+    font-size: 30px;
+    font-weight: bold;
+}
+
+.productos li:hover h2{
+    font-size: 33px;
+}
+
+.descripcion-producto{
+    font-size: 18px;
+}
+.descripcion-precio{
+    font-size: 20px;
+    font-weight: bold;
+    margin-top: 10px;
+}
+
+footer{
+    text-align: center;
+    background: url(imagenes/bg.jpg);
+    padding: 40px;
+}
+
+.copyright{
+    color: white;
+    font-size: 13px;
+    margin: 20px;
+}
+
+    /*CSS para Home*/
+
+.banner{
     width: 100%;
-    margin-top: -20px;
 }
 
 .principal{
-    background: #898989;
-    padding: 20px;
-    
+    padding: 3em 0;
+    background: #fefefe;
+    width: 940px;
+    margin:0 auto;
 }
 
-.titulo-centralizado{
+.titulo-principal{
     text-align: center;
+    font-size: 2em;
+    margin: 0 0 1em;
+    clear: left;
 }
 
-p{
-    text-align: center;
+.principal p{
+    margin: 0 0 1em;
 }
 
-em strong{
-    color: red;
+.principal strong{
+    font-weight: bold;
 }
 
-#mision{
-    font-size: 20px;
-}
-
-.diferenciales{
-    background: rgb(255, 255, 255);
-    padding: 30px;
-}
-
-.titulo-centralizado {
-    text-align: center;
-}
-
-.items {
+.principal em{
     font-style: italic;
 }
 
-ul {
-    display: inline-block;
-    vertical-align: top;
-    width: 20%;
-    margin-right: 15%;
-    
+.utensilios{
+    width: 130px;
+    float: left;
+    margin: 0 20px 20px 0;
 }
 
-.imgeDiferenciales {
-    width: 50%;
+.mapa{
+    padding: 3em 0;
+    background: linear-gradient(#fefefe, #888888);
+}
+
+.mapa p{
+    margin: 0 0 2em;
+    text-align: center;
+}
+
+.mapa-contenido{
+    width: 940px;
+    margin: 0 auto;
+}
+
+.diferenciales{
+    padding: 3em 0;
+    background: #888888;
+}
+
+.contenido-diferenciales{
+    width: 640px;
+    margin: 0 auto;
+}
+
+.lista-diferenciales{
+    width: 40%;
+    display: inline-block;
+    vertical-align: top;
+}
+
+.items{
+    line-height: 1.5;
+}
+
+.items::before{
+    content: "★";
+}
+
+.items:first-child{
+    font-weight: bold;
+}
+
+.imagen-diferenciales{
+    width: 60%;
+}
+
+.video{
+    width: 560px;
+    margin: 1em auto;
 }
